<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>

  <groupId>ca.bc.gov.nrs.wfnews</groupId>
  <artifactId>wfnews</artifactId>
  <version>1.0</version>
  <name>wfnews</name>
  <url>http://maven.apache.org</url>

  <properties>
    <java.version>21</java.version>
    <java-source-version>21</java-source-version>
    <java-target-version>21</java-target-version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.organization>bcgov-sonarcloud</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.sources>database,docker,lambda,terraform,client/wfnews-war/src/main/angular/src</sonar.sources>
  </properties>
  
  <modules>
    <module>client</module>
    <module>server/wfnews-api</module>
    <module>server/wfone-notifications-api</module>
    <module>server/wfone-notification-push-api</module>
    <module>server/wfss-pointid-api</module>
  </modules>

  <!-- <dependencyManagement>
		<dependencies>
  		<dependency>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>3.9.1.2184</version>
      </dependency>
    </dependencies>
  </dependencyManagement> -->

</project>
